--- a/src/main/resources/layouts/initialization.fxml
+++ b/src/main/resources/layouts/initialization.fxml
@@ -9,20 +9,26 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" prefHeight="300.0" prefWidth="300.0" styleClass="intro-container" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UIControllers.InitializationController">
+<VBox alignment="BOTTOM_LEFT" prefHeight="316.0" prefWidth="500.0" styleClass="intro-container" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UIControllers.InitializationController">
   <children>
-    <ProgressBar fx:id="appProgressBar" maxHeight="10.0" prefHeight="10.0" prefWidth="120.0" progress="-1.0">
+      <Label styleClass="logo-label" text="Dokey" textFill="WHITE">
+         <VBox.margin>
+            <Insets left="50.0" top="50.0" />
+         </VBox.margin>
+      </Label>
+      <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+    <ProgressBar fx:id="appProgressBar" maxHeight="10.0" maxWidth="1.7976931348623157E308" minHeight="5.0" prefHeight="10.0" prefWidth="220.0" progress="1.0">
       <VBox.margin>
-        <Insets bottom="10.0" top="160.0" />
+        <Insets bottom="20.0" left="50.0" />
       </VBox.margin>
     </ProgressBar>
-    <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-1.0" prefWidth="277.0" text="%grab_a_coffee" textAlignment="CENTER" textOverrun="ELLIPSIS" wrapText="false">
+    <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-1.0" text="%grab_a_coffee" textAlignment="CENTER" textFill="WHITE" textOverrun="ELLIPSIS" wrapText="false">
          <VBox.margin>
-            <Insets top="20.0" />
+            <Insets bottom="5.0" left="50.0" />
          </VBox.margin></Label>
-      <CheckBox fx:id="startCheckbox" mnemonicParsing="false" selected="true" text="%start_dokey_startup">
+      <CheckBox fx:id="startCheckbox" mnemonicParsing="false" selected="true" text="%start_dokey_startup" textFill="WHITE">
          <VBox.margin>
-            <Insets bottom="20.0" top="50.0" />
+            <Insets bottom="40.0" left="40.0" />
          </VBox.margin>
       </CheckBox>
   </children>
