Improve notification. Fix #120

--- a/src/main/resources/layouts/notification.fxml
+++ b/src/main/resources/layouts/notification.fxml
@@ -7,13 +7,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="98.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.notifications.NotificationController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="76.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.notifications.NotificationController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_LEFT">
+      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_LEFT">
          <children>
-            <Label fx:id="titleLabel" text="Dokey: Device Connected!">
+            <Label fx:id="titleLabel" text="Device Connected!">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
             <Label fx:id="messageLabel" text="Connected to: LG2948" />
@@ -21,16 +21,16 @@
       </VBox>
    </center>
    <left>
-      <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
-            <Image url="/assets/phone.png" />
+            <Image url="@../assets/icon.png" />
          </image>
          <BorderPane.margin>
-            <Insets right="8.0" />
+            <Insets right="15.0" />
          </BorderPane.margin>
       </ImageView>
    </left>
    <padding>
-      <Insets bottom="8.0" right="8.0" top="8.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
 </BorderPane>
