--- a/src/main/resources/layouts/search_dialog.fxml
+++ b/src/main/resources/layouts/search_dialog.fxml
@@ -7,19 +7,21 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="282.0" prefWidth="539.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.search.controllers.SearchController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="539.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.search.controllers.SearchController">
    <children>
       <HBox>
          <children>
-            <TextField fx:id="queryTextField" text="query" HBox.hgrow="ALWAYS">
+            <TextField fx:id="queryTextField" promptText="What do you want to do?" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="24.0" />
                </font>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
             </TextField>
             <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
-                  <Insets left="8.0" />
+                  <Insets left="8.0" right="10.0" top="10.0" />
                </HBox.margin>
                <image>
                   <Image url="@../assets/icon.png" />
@@ -30,9 +32,6 @@
             <Insets bottom="10.0" />
          </VBox.margin>
       </HBox>
-      <ListView fx:id="resultListView"/>
+      <ListView fx:id="resultListView" />
    </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
 </VBox>
