--- a/src/main/resources/css/search_dialog.css
+++ b/src/main/resources/css/search_dialog.css
@@ -66,6 +66,10 @@
 .list-view .list-cell:filled:selected .dokey-search-result-icon{
     -fx-effect: innershadow( gaussian , -primaryTextColor , 7 , 1 , 1 , 1 );
 }
+
+.list-view .list-cell:filled:selected .dokey-search-result-image{
+    -fx-effect: none;
+}
 .list-view .list-cell:filled:selected .label{
     -fx-text-fill: -primaryTextColor;
 }
