--- a/src/main/resources/layouts/command_editor.fxml
+++ b/src/main/resources/layouts/command_editor.fxml
@@ -12,11 +12,6 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="526.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.quickcommands.controllers.CommandEditorController">
    <center>
       <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn prefWidth="132.0" text="Command" />
-          <TableColumn prefWidth="224.0" text="Name" />
-            <TableColumn minWidth="0.0" prefWidth="191.0" text="Action" />
-        </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
@@ -80,9 +75,10 @@
                   <Label fx:id="actionLabel" text="No action specified yet..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <HBox GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <children>
-                        <Button fx:id="addActionBtn" mnemonicParsing="false" text="Add Action" />
-                        <Pane HBox.hgrow="ALWAYS" />
-                        <Button fx:id="saveBtn" mnemonicParsing="false" text="Save" />
+                         <MenuButton layoutX="-9.0" fx:id="addActionBtn" mnemonicParsing="false" text="Add Action">
+                         </MenuButton>
+                         <Pane HBox.hgrow="ALWAYS"/>
+                         <Button fx:id="saveBtn" mnemonicParsing="false" text="Save" />
                      </children>
                   </HBox>
                   <Label text="Name ( optional ):" GridPane.rowIndex="1">
