--- a/src/main/resources/layouts/command_editor.fxml
+++ b/src/main/resources/layouts/command_editor.fxml
@@ -27,19 +27,31 @@
                 <graphic>
                     <ImageView fitHeight="20" fitWidth="20">
                         <image>
-                            <Image url="/assets/toolbar_icons/add_app.png" />
+                            <Image url="/assets/toolbar_icons/add.png" />
                         </image>
                     </ImageView>
                 </graphic>
                 <tooltip>
-                    <Tooltip text="%add_app" />
+                    <Tooltip text="%add_command" />
+                </tooltip>
+            </Button>
+            <Button fx:id="removeCommandBtn" mnemonicParsing="false">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <image>
+                            <Image url="/assets/toolbar_icons/delete.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
+                <tooltip>
+                    <Tooltip text="%remove_command" />
                 </tooltip>
             </Button>
         </items>
       </ToolBar>
    </top>
    <bottom>
-      <VBox fx:id="editCommandVbox" BorderPane.alignment="CENTER">
+      <VBox fx:id="editCommandVbox" styleClass="command-box" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
@@ -52,7 +64,7 @@
               <rowConstraints>
                 <RowConstraints vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -72,20 +84,13 @@
                         <Insets right="8.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="actionLabel" text="No action specified yet..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <HBox GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <HBox alignment="BOTTOM_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <children>
-                         <MenuButton fx:id="addActionBtn" layoutX="-9.0" mnemonicParsing="false" text="Add Action">
+                        <VBox fx:id="actionBox" HBox.hgrow="ALWAYS">
                            <HBox.margin>
-                              <Insets right="8.0" />
-                           </HBox.margin></MenuButton>
-                        <Button fx:id="editActionBtn" mnemonicParsing="false" text="Edit Action">
-                           <HBox.margin>
-                              <Insets right="8.0" />
+                              <Insets right="8.0" top="3.0" />
                            </HBox.margin>
-                        </Button>
-                        <Button fx:id="clearActionBtn" mnemonicParsing="false" text="Clear Action" />
-                         <Pane HBox.hgrow="ALWAYS" />
+                        </VBox>
                          <Button fx:id="saveBtn" mnemonicParsing="false" text="Save" />
                      </children>
                   </HBox>
@@ -94,6 +99,19 @@
                         <Insets right="8.0" />
                      </GridPane.margin>
                   </Label>
+                  <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <children>
+                         <MenuButton fx:id="addActionBtn" mnemonicParsing="false" text="Select Action">
+                           <HBox.margin>
+                              <Insets right="8.0" />
+                           </HBox.margin>
+                        </MenuButton>
+                        <Button fx:id="clearActionBtn" mnemonicParsing="false" text="Change Action" />
+                     </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </HBox>
                </children>
             </GridPane>
          </children>
