Improve search bar

--- a/src/main/resources/css/search_dialog.css
+++ b/src/main/resources/css/search_dialog.css
@@ -28,6 +28,12 @@
     -fx-text-fill: #555555;
 }
 
+.filter-label {
+    -fx-font-family: "Nunito Sans Light";
+    -fx-font-size: 16;
+    -fx-text-fill: #555555;
+}
+
 .text-field:focused {
     -fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);
 }
