--- a/src/main/resources/layouts/search_dialog.fxml
+++ b/src/main/resources/layouts/search_dialog.fxml
@@ -7,7 +7,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" fx:id="rootNode" prefWidth="539.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.search.controllers.SearchController">
+<VBox fx:id="rootNode" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="539.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.search.controllers.SearchController">
    <children>
       <HBox>
          <children>
@@ -34,6 +34,14 @@
                   <Insets top="8.0" />
                </HBox.margin>
             </TextField>
+            <VBox alignment="CENTER_RIGHT" prefWidth="150.0">
+               <children>
+                  <Label fx:id="filterLabel" styleClass="filter-label">
+                     <VBox.margin>
+                        <Insets right="20.0" />
+                     </VBox.margin></Label>
+               </children>
+            </VBox>
          </children>
          <VBox.margin>
             <Insets />
