--- a/src/main/resources/layouts/application_list.fxml
+++ b/src/main/resources/layouts/application_list.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane prefHeight="550" prefWidth="350" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="app.editor.controllers.AppListController">
+<BorderPane prefHeight="550" prefWidth="350" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="app.control_panel.controllers.AppListController">
   <top>
     <TextField fx:id="searchTextField" promptText="%search_application" />
   </top>
