--- a/src/main/resources/layouts/shortcut_icon_list.fxml
+++ b/src/main/resources/layouts/shortcut_icon_list.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane prefHeight="500" prefWidth="300" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutIconListController">
+<BorderPane prefHeight="500" prefWidth="300" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.control_panel.controllers.ShortcutIconListController">
   <top>
     <TextField fx:id="searchTextField" promptText="%search_icon" />
   </top>
